--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'eclipse'
 
 apply plugin:'application'
 mainClassName = "Main"
